# Monorepo

./: .gitignore  .gitmodules  .gn  AGENTS.md  BUILD.gn  CLAUDE.md  LICENSE  README.md  extract_ios_sdk.sh  extract_sdk.sh  format_odin.sh  rfc_000_design_doc_template.md  sync_linux_sysroot.sh  sync_tools.sh  tidy_odin.sh
display_list/: BUILD.gn  display_list.cc  display_list.h  dl_builder.cc  dl_builder.h  dl_canvas.cc  dl_canvas.h  dl_color.cc  dl_color.h  dl_op_flags.h  dl_op_receiver.h  dl_op_records.h  dl_paint.cc  dl_paint.h  dl_storage.cc  dl_text.cc  dl_text.h  dl_text_skia.cc  dl_text_skia.h  dl_types.cc  dl_vertices.cc  dl_vertices.h
display_list/calayer/: dl_ca_dispatcher.h  dl_ca_dispatcher.mm
display_list/effects/: dl_color_filter.cc  dl_color_filter.h  dl_color_filters.h  dl_color_source.cc  dl_color_source.h  dl_color_sources.h  dl_image_filter.cc  dl_image_filter.h  dl_image_filters.h  dl_mask_filter.h  dl_runtime_effect.cc  dl_runtime_effect_skia.cc  dl_runtime_effect_skia.h
display_list/effects/color_filters/: dl_blend_color_filter.cc  dl_blend_color_filter.h  dl_linear_to_srgb_gamma_color_filter.cc  dl_linear_to_srgb_gamma_color_filter.h  dl_matrix_color_filter.cc  dl_matrix_color_filter.h  dl_srgb_to_linear_gamma_color_filter.cc  (+1 more)
display_list/geometry/: dl_geometry_conversions.h  dl_path.cc  dl_path.h  dl_path_builder.cc  dl_path_builder.h  dl_region.cc  dl_region.h  dl_rtree.cc  dl_rtree.h
display_list/image/: dl_image.cc  dl_image.h  dl_image_skia.cc  dl_image_skia.h
display_list/skia/: dl_sk_canvas.cc  dl_sk_canvas.h  dl_sk_conversions.cc  dl_sk_conversions.h  dl_sk_dispatcher.cc  dl_sk_dispatcher.h  dl_sk_paint_dispatcher.cc  dl_sk_paint_dispatcher.h
display_list/testing/: BUILD.gn  dl_render_test.h  dl_render_test_env.cc  dl_render_test_env.h  dl_render_unittests.cc
display_list/utils/: dl_accumulation_rect.cc  dl_accumulation_rect.h  dl_matrix_clip_tracker.cc  dl_matrix_clip_tracker.h  dl_receiver_utils.h
docs/: TEMPLATE.md  (+11 more)
doq_client/: BUILD.gn  README.md  dns_proto.c  dns_proto.h  doq_client.c  event_loop.c  event_loop.h
odin/: .clang-tidy  .gitignore  .prettierrc.json  BUILD.gn  accept_loop.c  accept_loop.h  accept_loop_internal_test.h  accept_loop_testing.c  accept_loop_unittests.cpp  check_client_xqc_runtime_scope.py  check_server_xqc_runtime_scope.py  check_xqc_stream_transport_scope.py  cli.c  cli.h  cli_client.c  cli_client.h  cli_server.c  cli_server.h  cli_server_internal_test.h  cli_server_testing.c  cli_server_unittests.cpp  cli_unittests.cpp  client_listen.c  client_listen.h  client_listen_unittests.cpp  client_session.c  client_session.h  client_xqc_runtime.c  client_xqc_runtime.h  connect_session.c  connect_session.h  connect_session_testing.c  connect_session_unittests.cpp  dial.c  dial.h  dial_internal_test.h  dial_testing.c  dial_unittests.cpp  dns_resolver.c  dns_resolver.h  (+67 more)
odin/docs/: GOAL.md  odin_basic_design.md  odin_proxy_design.md  odin_request_log_file.md  odin_unified_file_logging.md  rfc_001_control_frame_codec.md  rfc_001_quic_proxy_protocol.md  rfc_001_system_instruction_override.md  rfc_002_cli_skeleton.md  rfc_002_code_quality_and_formatting.md  rfc_003_ajv_request_validation.md  rfc_003_http_connect_parser.md  rfc_004_connect_req_zero_copy_codec.md  rfc_004_defensive_content_block_validation.md  rfc_005_connect_resp_v2_encoder.md  rfc_005_forward_incoming_anthropic_beta_header.md  rfc_006_cli_listen_port_parser.md  rfc_006_json_schema_sanitization_overhaul.md  rfc_007_cli_server_host_addr_parser.md  rfc_007_sse_stream_finite_state_machine.md  rfc_008_antigravity_sse_response_validation.md  rfc_008_http_connect_response_mapper.md  rfc_009_client_listen_handshake.md  rfc_009_readline_stream_framer.md  rfc_010_event_loop.md  rfc_010_whitelist_content_block_validation.md  rfc_011_bidirectional_byte_relay.md  rfc_011_json_schema_defs_ref_decomposition.md  rfc_012_anyof_to_oneof_sanitization.md  rfc_012_nonblocking_socket_dial.md  rfc_013_request_id_generation_alignment.md  rfc_013_transport_interface_fd_impl.md  rfc_013_usage_token_mapping_correction.md  rfc_014_relay_v2_transport.md  rfc_014_usage_token_mapping_correction.md  rfc_015_effort_based_thinking_budget_resolution.md  rfc_015_udp_endpoint.md  rfc_016_thinkingconfig_camelcase_and_tool_choice_mapping.md  rfc_016_xqc_stream_transport.md  rfc_017_tool_use_stop_reason_precedence.md  (+19 more)
odin/src/: cloudcode.js  constants.js  converter.js  index.js  logger.js  response-validator.js  server.js  validator.js
odin/testing/: .clang-tidy  BUILD.gn  accept_loop_internal_test.h  accept_loop_testing.c  accept_loop_unittests.cpp  cli_client_internal_test.h  cli_client_loopback_alias_unittests.cpp  cli_client_testing.c  cli_client_unittests.cpp  cli_server_internal_test.h  cli_server_quic_unittests.cpp  cli_server_testing.c  cli_server_unittests.cpp  cli_unittests.cpp  client_listen_unittests.cpp  client_session_internal_test.h  client_session_testing.c  client_session_unittests.cpp  client_xqc_runtime_internal_test.h  client_xqc_runtime_testing.c  client_xqc_runtime_unittests.cpp  connect_session_internal_test.h  connect_session_testing.c  connect_session_unittests.cpp  dial_internal_test.h  dial_testing.c  dial_unittests.cpp  dns_resolver_internal_test.h  dns_resolver_unittests.cpp  event_loop_internal_test.h  event_loop_testing.c  event_loop_unittests.cpp  host_addr_unittests.cpp  http_connect_unittests.cpp  parse_util_unittests.cpp  protocol_unittests.cpp  relay_testing.c  relay_unittests.cpp  server_runtime_internal_test.h  server_runtime_testing.c  (+21 more)
odin/tests/: content-block-fsm.test.js  effort-budget-converter.test.js  effort-budget-validator.test.js  function-response-struct.test.js  schema-sanitizer.test.js  stop-reason-precedence.test.js  stream-usage-mapping.test.js  tool-choice-mapping.test.js
skia/: BUILD.gn
thor/: BUILD.gn  README.md
thor/cfssl/: ca-config.json  root-ca-csr.json
thor/presets/: odin-server.env
thor/scripts/: init-ca.sh  issue-ca-file-test-fixtures.py  issue-ca-file-test-fixtures.sh  issue-server.sh  verify-server.sh
(+57 files in other folders)
