# The location of the build configuration file.
buildconfig = "//build/BUILDCONFIG.gn"

# The secondary source root is a parallel directory tree where
# GN build files are placed when they can not be placed directly
# in the source tree, e.g. for third party source trees.
secondary_source = "//build/secondary/"

# These are the targets to check when running "gn check".
check_targets = []

# Run all GN action() scripts through python3. Without this, GN would search
# $PATH for "python", which is absent on systems that ship only python3.
script_executable = "python3"
