# Root BUILD.gn file for the Monorepo project

group("default") {
  deps = [
    "//boringssl:ssl",
    "//c-ares:cares",
    "//display_list",
    "//skia",
    "//xquic",
  ]

  # ipsw parses dyld_shared_cache via <mach-o/loader.h>; Darwin-only by
  # construction.
  if (target_os == "mac") {
    deps += [ "//ipsw" ]
  }
}

# testonly so this group can pull in test executables (which depend on the
# testonly //googletest:gtest target). Kept out of :default so production
# builds don't drag in test code; build with `ninja -C out/Default tests`.
group("tests") {
  testonly = true
  deps = []

  # display_list render tests compare a CALayer backend against the Skia
  # raster baseline — without that second backend there's nothing to compare,
  # so the suite is built (and run) on macOS only.
  if (target_os == "mac") {
    deps += [ "//display_list/testing:dl_render_unittests" ]
  }
}
