# Root BUILD.gn file for the Monorepo project

group("default") {
  deps = [
    "//boringssl:ssl",
    "//c-ares:cares",
    "//odin:odin_cli_artifacts",
    "//xquic",
  ]

  # ipsw parses dyld_shared_cache via <mach-o/loader.h>; Darwin-only by
  # construction.
  if (target_os == "mac") {
    deps += [ "//ipsw" ]
  }
}

# testonly so this group can pull in test executables (which depend on the
# testonly //googletest:gtest target). Kept out of :default so production
# builds don't drag in test code; build with `ninja -C out/Default tests`.
group("tests") {
  testonly = true
  deps = [
    "//odin/testing:cli_client_loopback_alias_unittests",
    "//odin/testing:odin_unittests",
  ]
}
