# GN build for Flutter's display_list (sources copied from
# //flutter/engine/src/flutter/display_list at vendor time, with two include
# prefixes rewritten so they fit this monorepo's layout):
#   "flutter/display_list/..."        -> "display_list/..."
#   "flutter/third_party/skia/include/..." -> "include/..."
#
# Skia includes ("include/core/SkPath.h", …) resolve via //skia's
# skia_public_config (which adds -I //third_party/skia).
#
# fml and impeller/geometry headers are read from their original location
# under //flutter/engine/src/flutter via the include_dirs below — those two
# subsets are also compiled here as minimal source_sets, so we don't need to
# pick up flutter's own BUILD.gn (which imports build infra we don't ship).

# Public-facing config: every consumer of //display_list (including the
# fml_minimal / impeller_geometry source_sets defined below, since they
# need to see "flutter/..." includes inside their own .cc files) gets these.
config("dl_public_config") {
  include_dirs = [
    # "//flutter/engine/src" so "flutter/fml/..." and "flutter/impeller/..."
    # resolve to the vendored flutter source tree.
    "//flutter/engine/src",

    # "//flutter/engine/src/flutter" so the geometry headers' internal
    # "fml/logging.h" / "impeller/geometry/foo.h" style includes resolve.
    "//flutter/engine/src/flutter",
  ]

  defines = [
    # FLUTTER_RELEASE=1 makes flutter/fml/trace_event.h's TRACE_EVENT* macros
    # compile to no-ops, so we never reference the libdart symbols even
    # though the Dart C API headers are now present. Without the explicit
    # "=1", "#if FLUTTER_RELEASE" would treat an empty macro as 0.
    "FLUTTER_RELEASE=1",

    # display_list still calls SkGradientShader::MakeLinear / MakeRadial /
    # MakeTwoPointConical / MakeSweep with the legacy "SkColor[] + SkScalar[]
    # pos + int count" signature. Skia gated those overloads behind this
    # define when migrating to SkSpan-based factories.
    "SK_SUPPORT_LEGACY_UNSPANNED_GRADIENTS",
  ]
}

# Private compile config used while building these sources — suppresses the
# warning categories that flutter source trips under the project-wide
# -Wall -Wextra -Werror.
config("dl_internal_config") {
  cflags = [
    "-Wno-unused-parameter",
    "-Wno-unused-variable",
    "-Wno-unused-function",
    "-Wno-unused-private-field",
    "-Wno-missing-field-initializers",
    "-Wno-sign-compare",
    "-Wno-deprecated-declarations",
    "-Wno-extra-semi",
    "-Wno-implicit-fallthrough",

    # Skia headers we now pull in (SkVx etc) trip this on x86_64 without -mavx.
    "-Wno-psabi",
  ]
}

# fml minimum subset: the .cc files backing the fml headers display_list
# transitively #includes (logging, trace_event, time/time_point), plus their
# log_settings deps. Header-only files (macros.h, build_config.h, log_level.h,
# time/time_delta.h) are listed for IDE / dep-tracking completeness.
source_set("fml_minimal") {
  _fml = "//flutter/engine/src/flutter/fml"
  sources = [
    "$_fml/build_config.h",
    "$_fml/log_level.h",
    "$_fml/log_settings.cc",
    "$_fml/log_settings.h",
    "$_fml/log_settings_state.cc",
    "$_fml/logging.cc",
    "$_fml/logging.h",
    "$_fml/macros.h",
    "$_fml/time/time_delta.h",
    "$_fml/time/time_point.cc",
    "$_fml/time/time_point.h",
    "$_fml/trace_event.cc",
    "$_fml/trace_event.h",
  ]
  configs += [
    ":dl_internal_config",
    "//build:cxx20",
  ]
  public_configs = [ ":dl_public_config" ]
}

# Impeller geometry: pure data-structure subset. Source list mirrors
# //flutter/engine/src/flutter/impeller/geometry/BUILD.gn's impeller_component
# ("geometry") sources block (sans testonly targets).
source_set("impeller_geometry") {
  _g = "//flutter/engine/src/flutter/impeller/geometry"
  sources = [
    "$_g/arc.cc",
    "$_g/arc.h",
    "$_g/color.cc",
    "$_g/color.h",
    "$_g/constants.cc",
    "$_g/constants.h",
    "$_g/dashed_line_path_source.cc",
    "$_g/dashed_line_path_source.h",
    "$_g/gradient.cc",
    "$_g/gradient.h",
    "$_g/half.h",
    "$_g/matrix.cc",
    "$_g/matrix.h",
    "$_g/matrix_decomposition.cc",
    "$_g/matrix_decomposition.h",
    "$_g/path_source.cc",
    "$_g/path_source.h",
    "$_g/point.cc",
    "$_g/point.h",
    "$_g/quaternion.cc",
    "$_g/quaternion.h",
    "$_g/rational.cc",
    "$_g/rational.h",
    "$_g/rect.cc",
    "$_g/rect.h",
    "$_g/round_rect.cc",
    "$_g/round_rect.h",
    "$_g/round_superellipse.cc",
    "$_g/round_superellipse.h",
    "$_g/round_superellipse_param.cc",
    "$_g/round_superellipse_param.h",
    "$_g/rounding_radii.cc",
    "$_g/rounding_radii.h",
    "$_g/rstransform.cc",
    "$_g/rstransform.h",
    "$_g/saturated_math.h",
    "$_g/scalar.h",
    "$_g/separated_vector.cc",
    "$_g/separated_vector.h",
    "$_g/shear.cc",
    "$_g/shear.h",
    "$_g/sigma.cc",
    "$_g/sigma.h",
    "$_g/size.cc",
    "$_g/size.h",
    "$_g/trig.cc",
    "$_g/trig.h",
    "$_g/type_traits.cc",
    "$_g/type_traits.h",
    "$_g/vector.cc",
    "$_g/vector.h",
    "$_g/wangs_formula.cc",
    "$_g/wangs_formula.h",
  ]
  public_deps = [
    ":fml_minimal",
    "//skia",
  ]
  configs += [
    ":dl_internal_config",
    "//build:cxx20",
  ]
  public_configs = [ ":dl_public_config" ]
}

# display_list itself: the sources copied into this directory (Step 2 of the
# vendor procedure documented in the file header). Mirrors flutter's
# source_set("display_list") + source_set("dl_path") merged into one target.
static_library("display_list") {
  sources = [
    "display_list.cc",
    "display_list.h",
    "dl_attributes.h",
    "dl_blend_mode.cc",
    "dl_blend_mode.h",
    "dl_builder.cc",
    "dl_builder.h",
    "dl_canvas.cc",
    "dl_canvas.h",
    "dl_color.cc",
    "dl_color.h",
    "dl_op_flags.cc",
    "dl_op_flags.h",
    "dl_op_receiver.cc",
    "dl_op_receiver.h",
    "dl_op_records.cc",
    "dl_op_records.h",
    "dl_paint.cc",
    "dl_paint.h",
    "dl_sampling_options.h",
    "dl_storage.cc",
    "dl_storage.h",
    "dl_text.cc",
    "dl_text.h",
    "dl_text_skia.cc",
    "dl_text_skia.h",
    "dl_tile_mode.h",
    "dl_types.cc",
    "dl_types.h",
    "dl_vertices.cc",
    "dl_vertices.h",
    "effects/color_filters/dl_blend_color_filter.cc",
    "effects/color_filters/dl_blend_color_filter.h",
    "effects/color_filters/dl_linear_to_srgb_gamma_color_filter.cc",
    "effects/color_filters/dl_linear_to_srgb_gamma_color_filter.h",
    "effects/color_filters/dl_matrix_color_filter.cc",
    "effects/color_filters/dl_matrix_color_filter.h",
    "effects/color_filters/dl_srgb_to_linear_gamma_color_filter.cc",
    "effects/color_filters/dl_srgb_to_linear_gamma_color_filter.h",
    "effects/color_sources/dl_conical_gradient_color_source.cc",
    "effects/color_sources/dl_conical_gradient_color_source.h",
    "effects/color_sources/dl_gradient_color_source_base.h",
    "effects/color_sources/dl_image_color_source.cc",
    "effects/color_sources/dl_image_color_source.h",
    "effects/color_sources/dl_linear_gradient_color_source.cc",
    "effects/color_sources/dl_linear_gradient_color_source.h",
    "effects/color_sources/dl_matrix_color_source_base.h",
    "effects/color_sources/dl_radial_gradient_color_source.cc",
    "effects/color_sources/dl_radial_gradient_color_source.h",
    "effects/color_sources/dl_runtime_effect_color_source.cc",
    "effects/color_sources/dl_runtime_effect_color_source.h",
    "effects/color_sources/dl_sweep_gradient_color_source.cc",
    "effects/color_sources/dl_sweep_gradient_color_source.h",
    "effects/dl_color_filter.cc",
    "effects/dl_color_filter.h",
    "effects/dl_color_filters.h",
    "effects/dl_color_source.cc",
    "effects/dl_color_source.h",
    "effects/dl_color_sources.h",
    "effects/dl_image_filter.cc",
    "effects/dl_image_filter.h",
    "effects/dl_image_filters.h",
    "effects/dl_mask_filter.cc",
    "effects/dl_mask_filter.h",
    "effects/dl_runtime_effect.cc",
    "effects/dl_runtime_effect.h",
    "effects/dl_runtime_effect_skia.cc",
    "effects/dl_runtime_effect_skia.h",
    "effects/image_filters/dl_blur_image_filter.cc",
    "effects/image_filters/dl_blur_image_filter.h",
    "effects/image_filters/dl_color_filter_image_filter.cc",
    "effects/image_filters/dl_color_filter_image_filter.h",
    "effects/image_filters/dl_compose_image_filter.cc",
    "effects/image_filters/dl_compose_image_filter.h",
    "effects/image_filters/dl_dilate_image_filter.cc",
    "effects/image_filters/dl_dilate_image_filter.h",
    "effects/image_filters/dl_erode_image_filter.cc",
    "effects/image_filters/dl_erode_image_filter.h",
    "effects/image_filters/dl_local_matrix_image_filter.cc",
    "effects/image_filters/dl_local_matrix_image_filter.h",
    "effects/image_filters/dl_matrix_image_filter.cc",
    "effects/image_filters/dl_matrix_image_filter.h",
    "effects/image_filters/dl_runtime_effect_image_filter.cc",
    "effects/image_filters/dl_runtime_effect_image_filter.h",
    "geometry/dl_geometry_conversions.h",
    "geometry/dl_geometry_types.h",
    "geometry/dl_path.cc",
    "geometry/dl_path.h",
    "geometry/dl_path_builder.cc",
    "geometry/dl_path_builder.h",
    "geometry/dl_region.cc",
    "geometry/dl_region.h",
    "geometry/dl_rtree.cc",
    "geometry/dl_rtree.h",
    "image/dl_image.cc",
    "image/dl_image.h",
    "image/dl_image_skia.cc",
    "image/dl_image_skia.h",
    "skia/dl_sk_canvas.cc",
    "skia/dl_sk_canvas.h",
    "skia/dl_sk_conversions.cc",
    "skia/dl_sk_conversions.h",
    "skia/dl_sk_dispatcher.cc",
    "skia/dl_sk_dispatcher.h",
    "skia/dl_sk_paint_dispatcher.cc",
    "skia/dl_sk_paint_dispatcher.h",
    "skia/dl_sk_types.h",
    "utils/dl_accumulation_rect.cc",
    "utils/dl_accumulation_rect.h",
    "utils/dl_comparable.h",
    "utils/dl_matrix_clip_tracker.cc",
    "utils/dl_matrix_clip_tracker.h",
    "utils/dl_receiver_utils.cc",
    "utils/dl_receiver_utils.h",
  ]
  public_deps = [
    ":fml_minimal",
    ":impeller_geometry",
    "//skia",
  ]
  configs += [
    ":dl_internal_config",
    "//build:cxx20",
  ]
  public_configs = [ ":dl_public_config" ]
}
