# odin GN build (RFC-001 codec + RFC-002 single-binary CLI skeleton).
#
# Targets:
#   :odin                — source_set: codec (RFC-001) + CLI parser (RFC-002).
#   :odin_main           — executable wrapping odin_cli_main; output_name is
#                          "odin" so the produced binary is out/odin. (Named
#                          :odin_main because :odin already labels the
#                          source_set.)
#   :odin_symlinks       — GN action that creates relative symlinks
#                          out/odin-client and out/odin-server pointing to
#                          basename "odin". Intentionally has no deps on
#                          :odin_main: link contents depend only on script
#                          and link/target paths, so relinking out/odin
#                          must not re-run the action.
#   :odin_cli_artifacts  — group bundling :odin_main + :odin_symlinks.
#   :odin_unittests      — googletest binary (cli_unittests.cpp owns main(),
#                          so we link :gtest, not :gtest_main). Pulls in
#                          :odin_cli_artifacts via data_deps so
#                          `ninja -C out/ tests` produces the runtime
#                          artifacts T9 spawns. _GNU_SOURCE is set on
#                          Linux only — T8's fmemopen is hidden behind that
#                          feature macro by glibc.

source_set("odin") {
  sources = [
    "cli.c",
    "cli.h",
    "client_listen.c",
    "client_listen.h",
    "host_addr.c",
    "host_addr.h",
    "http_connect.c",
    "http_connect.h",
    "parse_util.c",
    "parse_util.h",
    "protocol.c",
    "protocol.h",
  ]
}

executable("odin_main") {
  output_name = "odin"

  sources = [ "main.c" ]

  deps = [ ":odin" ]
}

action("odin_symlinks") {
  script = "//build/symlink.py"

  outputs = [
    "$root_out_dir/odin-client",
    "$root_out_dir/odin-server",
  ]

  args = [
    "--target",
    "odin",
    "--link",
    rebase_path("$root_out_dir/odin-client", root_build_dir),
    "--link",
    rebase_path("$root_out_dir/odin-server", root_build_dir),
  ]
}

group("odin_cli_artifacts") {
  deps = [
    ":odin_main",
    ":odin_symlinks",
  ]
}

executable("odin_unittests") {
  testonly = true

  sources = [
    "cli_unittests.cpp",
    "client_listen_unittests.cpp",
    "host_addr_unittests.cpp",
    "http_connect_unittests.cpp",
    "parse_util_unittests.cpp",
    "protocol_unittests.cpp",
  ]

  deps = [
    ":odin",
    "//googletest:gtest",
  ]

  data_deps = [ ":odin_cli_artifacts" ]

  configs += [ "//build:cxx17" ]

  if (target_os == "linux") {
    defines = [ "_GNU_SOURCE" ]
  }
}
