# odin GN build (RFC-001 codec + RFC-002 single-binary CLI skeleton).
#
# Targets:
#   :odin                — source_set: codec (RFC-001) + CLI parser (RFC-002).
#   :odin_main           — executable wrapping odin_cli_main; output_name is
#                          "odin" so the produced binary is out/odin. (Named
#                          :odin_main because :odin already labels the
#                          source_set.)
#   :odin_symlinks       — GN action that creates relative symlinks
#                          out/odin-client and out/odin-server pointing to
#                          basename "odin". Intentionally has no deps on
#                          :odin_main: link contents depend only on script
#                          and link/target paths, so relinking out/odin
#                          must not re-run the action.
#   :odin_cli_artifacts  — group bundling :odin_main + :odin_symlinks.
#   :odin_unittests      — googletest binary (cli_unittests.cpp owns main(),
#                          so we link :gtest, not :gtest_main). Pulls in
#                          :odin_cli_artifacts via data_deps so
#                          `ninja -C out/ tests` produces the runtime
#                          artifacts T9 spawns. _GNU_SOURCE is set on
#                          Linux only — T8's fmemopen is hidden behind that
#                          feature macro by glibc.

source_set("odin_core") {
  sources = [
    "cli.c",
    "cli.h",
    "client_listen.c",
    "client_listen.h",
    "host_addr.c",
    "host_addr.h",
    "http_connect.c",
    "http_connect.h",
    "parse_util.c",
    "parse_util.h",
    "protocol.c",
    "protocol.h",
  ]
}

source_set("odin") {
  deps = [
    ":odin_core",
    ":odin_dial",
    ":odin_event_loop",
    ":odin_relay",
    ":odin_transport",
    ":odin_transport_fd",
    ":odin_udp",
  ]
}

source_set("odin_event_loop") {
  sources = [
    "event_loop.c",
    "event_loop.h",
  ]
}

source_set("odin_udp") {
  sources = [
    "udp.c",
    "udp.h",
  ]

  public_deps = [ ":odin_event_loop" ]
}

source_set("odin_relay") {
  sources = [
    "relay.c",
    "relay.h",
  ]

  public_deps = [ ":odin_transport" ]
}

source_set("odin_dial") {
  sources = [
    "dial.c",
    "dial.h",
  ]

  public_deps = [ ":odin_event_loop" ]
}

source_set("odin_transport") {
  sources = [
    "transport.c",
    "transport.h",
  ]
}

source_set("odin_transport_fd") {
  sources = [
    "transport_fd.c",
    "transport_fd.h",
  ]

  public_deps = [
    ":odin_event_loop",
    ":odin_transport",
  ]
}

config("odin_event_loop_testing_config") {
  defines = [ "ODIN_EVENT_LOOP_TESTING" ]
}

source_set("odin_event_loop_testing") {
  testonly = true

  sources = [
    "event_loop.h",
    "event_loop_internal_test.h",
    "event_loop_testing.c",
  ]

  configs += [ ":odin_event_loop_testing_config" ]
}

config("odin_dial_testing_config") {
  defines = [ "ODIN_DIAL_TESTING" ]
}

config("odin_transport_fd_testing_config") {
  defines = [ "ODIN_TRANSPORT_FD_TESTING" ]
}

config("odin_udp_testing_config") {
  defines = [ "ODIN_UDP_TESTING" ]
}

executable("odin_main") {
  output_name = "odin"

  sources = [ "main.c" ]

  deps = [ ":odin" ]

  if (target_os == "linux") {
    configs -= [ "//build:visibility_hidden" ]
    configs += [ "//build:visibility_default" ]
  }
}

action("odin_symlinks") {
  script = "//build/symlink.py"

  outputs = [
    "$root_out_dir/odin-client",
    "$root_out_dir/odin-server",
  ]

  args = [
    "--target",
    "odin",
    "--link",
    rebase_path("$root_out_dir/odin-client", root_build_dir),
    "--link",
    rebase_path("$root_out_dir/odin-server", root_build_dir),
  ]
}

group("odin_cli_artifacts") {
  deps = [
    ":odin_main",
    ":odin_symlinks",
  ]
}

executable("odin_unittests") {
  testonly = true

  sources = [
    "cli_unittests.cpp",
    "client_listen_unittests.cpp",
    "dial.h",
    "dial_internal_test.h",
    "dial_testing.c",
    "dial_unittests.cpp",
    "event_loop_unittests.cpp",
    "host_addr_unittests.cpp",
    "http_connect_unittests.cpp",
    "parse_util_unittests.cpp",
    "protocol_unittests.cpp",
    "relay.h",
    "relay_testing.c",
    "relay_unittests.cpp",
    "transport.h",
    "transport_fd.h",
    "transport_fd_internal_test.h",
    "transport_fd_testing.c",
    "transport_fd_unittests.cpp",
    "transport_testing.c",
    "transport_unittests.cpp",
    "udp.h",
    "udp_internal_test.h",
    "udp_testing.c",
    "udp_unittests.cpp",
  ]

  deps = [
    ":odin_core",
    ":odin_event_loop_testing",
    "//googletest:gtest",
  ]

  data_deps = [ ":odin_cli_artifacts" ]

  configs += [
    ":odin_dial_testing_config",
    ":odin_event_loop_testing_config",
    ":odin_transport_fd_testing_config",
    ":odin_udp_testing_config",
    "//build:cxx17",
  ]

  if (target_os == "linux") {
    defines = [ "_GNU_SOURCE" ]
    configs -= [ "//build:visibility_hidden" ]
    configs += [ "//build:visibility_default" ]
  }
}
