# odin GN build (RFC-001 codec + RFC-002 single-binary CLI skeleton).
#
# Targets:
#   :odin                — source_set: codec (RFC-001) + CLI parser (RFC-002).
#   :odin_main           — executable wrapping odin_cli_main; output_name is
#                          "odin" so the produced binary is out/odin. (Named
#                          :odin_main because :odin already labels the
#                          source_set.)
#   :odin_symlinks       — GN action that creates relative symlinks
#                          out/odin-client and out/odin-server pointing to
#                          basename "odin". Intentionally has no deps on
#                          :odin_main: link contents depend only on script
#                          and link/target paths, so relinking out/odin
#                          must not re-run the action.
#   :odin_cli_artifacts  — group bundling :odin_main + :odin_symlinks.
#
# Test targets live in //odin/testing:BUILD.gn (notably :odin_unittests
# and :odin_event_loop_testing).

source_set("odin_core") {
  sources = [
    "cli.c",
    "cli.h",
    "client_listen.c",
    "client_listen.h",
    "host_addr.c",
    "host_addr.h",
    "http_connect.c",
    "http_connect.h",
    "parse_util.c",
    "parse_util.h",
    "protocol.c",
    "protocol.h",
  ]
}

source_set("odin") {
  deps = [
    ":odin_accept_loop",
    ":odin_cli_client",
    ":odin_cli_server",
    ":odin_client_xqc_runtime",
    ":odin_connect_session",
    ":odin_core",
    ":odin_dial",
    ":odin_dns_resolver",
    ":odin_event_loop",
    ":odin_relay",
    ":odin_server_session",
    ":odin_server_xqc_runtime",
    ":odin_transport",
    ":odin_transport_fd",
    ":odin_transport_xqc",
    ":odin_udp",
    ":odin_xqc_udp",
  ]
}

source_set("odin_cli_client") {
  sources = [
    "cli_client.c",
    "cli_client.h",
  ]

  public_deps = [
    ":odin_accept_loop",
    ":odin_client_xqc_runtime",
    ":odin_core",
    ":odin_event_loop",
  ]
}

source_set("odin_client_session") {
  sources = [
    "client_session.c",
    "client_session.h",
  ]

  public_deps = [
    ":odin_connect_session",
    ":odin_core",
    ":odin_event_loop",
    ":odin_relay",
    ":odin_transport",
    ":odin_transport_fd",
  ]
}

source_set("odin_client_xqc_runtime") {
  sources = [
    "client_xqc_runtime.c",
    "client_xqc_runtime.h",
  ]

  public_deps = [
    ":odin_client_session",
    ":odin_event_loop",
    ":odin_transport_xqc",
    ":odin_xqc_udp",
    "//boringssl:crypto",
    "//xquic",
  ]
}

source_set("odin_cli_server") {
  sources = [
    "cli_server.c",
    "cli_server.h",
  ]

  public_deps = [
    ":odin_core",
    ":odin_event_loop",
    ":odin_server_xqc_runtime",
  ]
}

source_set("odin_event_loop") {
  sources = [
    "event_loop.c",
    "event_loop.h",
  ]

  if (target_os == "linux") {
    libs = [ "pthread" ]
  }
}

source_set("odin_dns_resolver") {
  sources = [
    "dns_resolver.c",
    "dns_resolver.h",
  ]

  public_deps = [
    ":odin_event_loop",
    "//c-ares:cares",
  ]
}

source_set("odin_udp") {
  sources = [
    "udp.c",
    "udp.h",
  ]

  public_deps = [ ":odin_event_loop" ]
}

source_set("odin_relay") {
  sources = [
    "relay.c",
    "relay.h",
  ]

  public_deps = [ ":odin_transport" ]
}

source_set("odin_server_session") {
  sources = [
    "server_session.c",
    "server_session.h",
  ]

  public_deps = [
    ":odin_connect_session",
    ":odin_dial",
    ":odin_dns_resolver",
    ":odin_event_loop",
    ":odin_relay",
    ":odin_transport",
    ":odin_transport_fd",
  ]
}

source_set("odin_server_xqc_runtime") {
  sources = [
    "server_xqc_runtime.c",
    "server_xqc_runtime.h",
  ]

  public_deps = [
    ":odin_event_loop",
    ":odin_server_session",
    ":odin_transport_xqc",
    ":odin_xqc_udp",
    "//xquic",
  ]
}

source_set("odin_connect_session") {
  sources = [
    "connect_session.c",
    "connect_session.h",
  ]

  public_deps = [
    ":odin_core",
    ":odin_transport",
  ]
}

source_set("odin_dial") {
  sources = [
    "dial.c",
    "dial.h",
  ]

  public_deps = [ ":odin_event_loop" ]
}

source_set("odin_accept_loop") {
  sources = [
    "accept_loop.c",
    "accept_loop.h",
  ]

  public_deps = [ ":odin_event_loop" ]
}

source_set("odin_transport") {
  sources = [
    "transport.c",
    "transport.h",
  ]
}

source_set("odin_transport_fd") {
  sources = [
    "transport_fd.c",
    "transport_fd.h",
  ]

  public_deps = [
    ":odin_event_loop",
    ":odin_transport",
  ]
}

source_set("odin_transport_xqc") {
  sources = [
    "transport_xqc.c",
    "transport_xqc.h",
  ]

  public_deps = [
    ":odin_transport",
    "//xquic",
  ]
}

source_set("odin_xqc_udp") {
  sources = [
    "xqc_udp.c",
    "xqc_udp.h",
  ]

  public_deps = [
    ":odin_event_loop",
    ":odin_udp",
    "//xquic",
  ]
}

action("odin_transport_xqc_scope_check") {
  script = "check_xqc_stream_transport_scope.py"

  inputs = [
    "transport_xqc.c",
    "transport_xqc.h",
    "BUILD.gn",
  ]

  outputs = [ "$target_gen_dir/odin_transport_xqc_scope_check.stamp" ]

  args = [
    "--root",
    rebase_path("//", root_build_dir),
    "--stamp",
    rebase_path(outputs[0], root_build_dir),
  ]
}

action("odin_client_xqc_runtime_scope_check") {
  script = "check_client_xqc_runtime_scope.py"

  inputs = [
    "cli_client.c",
    "cli_client.h",
    "client_session.c",
    "client_xqc_runtime.c",
    "client_xqc_runtime.h",
    "BUILD.gn",
  ]

  outputs = [ "$target_gen_dir/odin_client_xqc_runtime_scope_check.stamp" ]

  args = [
    "--root",
    rebase_path("//", root_build_dir),
    "--stamp",
    rebase_path(outputs[0], root_build_dir),
  ]
}

executable("odin_main") {
  output_name = "odin"

  sources = [ "main.c" ]

  deps = [ ":odin" ]

  if (target_os == "linux") {
    configs -= [ "//build:visibility_hidden" ]
    configs += [ "//build:visibility_default" ]
  }
}

action("odin_symlinks") {
  script = "//build/symlink.py"

  outputs = [
    "$root_out_dir/odin-client",
    "$root_out_dir/odin-server",
  ]

  args = [
    "--target",
    "odin",
    "--link",
    rebase_path("$root_out_dir/odin-client", root_build_dir),
    "--link",
    rebase_path("$root_out_dir/odin-server", root_build_dir),
  ]
}

group("odin_cli_artifacts") {
  deps = [
    ":odin_main",
    ":odin_symlinks",
  ]
}
