# GN build for Skia (m134, pinned at //third_party/skia submodule).
#
# Goal: minimal, CPU-only Skia. The rest (codecs, GPU, fonts, text shaping,
# PDF, SVG, …) is left out and will be added when external third-party deps
# are vendored. See README for the deferred-dependency list.
#
# Strategy: hand-rolled GN file (mirrors c-ares/googletest pattern) that
# imports Skia's own generated source-list `.gni` files. This avoids dragging
# in Skia's 3856-line BUILD.gn and its build_overrides/skia_target template
# machinery, but stays in sync with upstream's authoritative source lists.
#
# What's included:
#   - skia_core_sources                — canvas, raster pipeline, shaders, …
#   - skia_colorfilters_sources        — referenced by SkRuntimeEffect
#   - skia_effects_sources             — gradients (Linear/Radial/Sweep/
#                                        Conical), SkDashPathEffect,
#                                        SkBlurMaskFilter, SkColorMatrixFilter,
#                                        path effects, …
#   - skia_effects_imagefilter_sources — SkImageFilters::Blur / Dilate /
#                                        Erode / Compose / MatrixTransform /
#                                        ColorFilter / RuntimeShader …
#                                        (needed by display_list)
#   - skia_sksl_core_sources +
#     skia_sksl_core_module_sources +
#     skia_sksl_tracing_sources        — SkSL compiler (needed by
#                                        SkRuntimeEffect)
#   - skia_ports_sources               — global init + SkOSFile_stdio
#   - skia_utils_private               — SkShadowUtils, SkDashPath impl,
#                                        misc utils
#   - SkMemory_malloc / SkOSFile_posix /
#     SkDebug_stdio / SkDiscardableMemory_none /
#     SkOTTable_name / SkOTUtils       — hardcoded ports the upstream skia
#                                        target adds outside its .gni lists
#   - modules/skcms                    — color management (vendored in
#                                        third_party/skia/modules/skcms)
#
# Note on SK_DISABLE_EFFECT_DESERIALIZATION (see skia_internal_config below):
# kept ON. Effects/image filters are reachable via factory APIs
# (SkImageFilters::Blur, SkGradientShader::MakeLinear, …) which work fine.
# Only deserializing them from a binary stream is disabled — display_list
# doesn't need that path.
#
# What's excluded (explicitly):
#   - GPU backends (Ganesh, Graphite) — SK_GANESH / SK_GRAPHITE undefined
#   - Image codecs (PNG/JPEG/WebP/…)  — needs libpng/libjpeg-turbo/libwebp
#   - Font managers                   — SkFontMgr::RefEmpty() is the only
#                                       built-in factory; system fontmgrs
#                                       need freetype / fontconfig / CoreText
#   - Text shaping                    — needs harfbuzz + icu
#   - PDF / SVG / Skottie             — needs zlib / expat / harfbuzz
#   - SK_ENABLE_AVX512_OPTS           — would require SkOpts_skx.cpp with
#                                       -march=skylake-avx512
#
# CPU dispatch: skia_core_sources contains per-arch _opts_*.cpp files
# (ssse3/hsw/avx/erms/lasx). They self-guard with `#if defined(SK_CPU_X86)` /
# `#if defined(SK_CPU_LOONGARCH)` and use `#pragma clang attribute push` to
# enable target attributes per function — no command-line -m flags needed.
# The separate SkOpts_hsw.cpp dispatcher (under //third_party/skia/src/opts/) is the one
# exception: it needs -march=haswell, so we add it for x64 only via the
# :skia_opts_hsw target.

import("//third_party/skia/gn/core.gni")
import("//third_party/skia/gn/effects.gni")
import("//third_party/skia/gn/effects_imagefilters.gni")
import("//third_party/skia/gn/opts.gni")
import("//third_party/skia/gn/ports.gni")
import("//third_party/skia/gn/sksl.gni")
import("//third_party/skia/gn/utils.gni")
import("//third_party/skia/modules/skcms/skcms.gni")

# Public-facing config: anything that depends on //skia gets these include
# dirs and feature defines so it can resolve <include/core/SkSurface.h> etc.
# Mirrors Skia's own ":skia_public" but pared down to what minimal core needs.
config("skia_public_config") {
  include_dirs = [ "//third_party/skia" ]

  # Per Skia's BUILD.gn :skia_public, BGRA channel order on Linux only.
  # Mac/iOS/Android keep the default (RGBA). This must be public because
  # SkColor / SkPMColor inline math uses it.
  defines = []
  if (current_os == "linux") {
    defines += [ "SK_R32_SHIFT=16" ]
  }
}

# Private compile config used while building Skia itself. Mirrors Skia's
# ":skia_private" + ":skia_library" combined, plus warning suppressions for
# the headers/sources that trip our project-wide -Wall -Wextra -Werror.
config("skia_internal_config") {
  defines = [
    # skia_library: makes SK_API resolve to dllexport on Win / default
    # visibility on POSIX. No-op for static builds (SK_API is empty unless
    # SKIA_DLL is set), but kept for parity with upstream.
    "SKIA_IMPLEMENTATION=1",

    # skia_private defaults.
    "SK_GAMMA_APPLY_TO_A8",

    # Drop the trace-event glue. Without this, every TRACE_EVENT0/1/2 macro
    # would resolve to a Perfetto/Chrome tracing call we don't ship.
    "SK_DISABLE_TRACING",

    # Skip flattenable (path-effect / image-filter) deserialization
    # registration in src/ports/SkGlobalInitialization_default.cpp.
    # The factory APIs (SkImageFilters::Blur, SkGradientShader::MakeLinear,
    # SkDashPathEffect::Make, …) work without this registration; only
    # deserializing them from a binary stream is unavailable. display_list
    # constructs everything via factories, so this is fine.
    "SK_DISABLE_EFFECT_DESERIALIZATION",

    # Match display_list/dl_public_config's same define so
    # SkGradientShader::Make{Linear,Radial,Sweep,TwoPointConical}'s legacy
    # SkColor[]+SkScalar[]+count overloads are actually compiled into
    # libskia.a — display_list/skia/dl_sk_conversions.cc calls them.
    # Without this, full DL dispatch links break (the unused demo path
    # happens to skip those .o, masking it).
    "SK_SUPPORT_LEGACY_UNSPANNED_GRADIENTS",
  ]

  cflags = [
    # Skia headers/sources trip these under -Wall -Wextra -Werror.
    "-Wno-unused-parameter",
    "-Wno-missing-field-initializers",
    "-Wno-unused-but-set-variable",
    "-Wno-unused-function",
    "-Wno-deprecated-declarations",
    "-Wno-unused-variable",
    "-Wno-extra-semi",
    "-Wno-implicit-fallthrough",
    "-Wno-sign-compare",

    # SkVx.h uses GCC extended vector types (ext_vector_type(16)) for SIMD
    # math. On x86_64 without -mavx, the System V psABI says these would be
    # passed through memory; AVX would put them in ymm registers. Clang
    # warns that this changes the ABI from non-AVX callers' perspective.
    # Skia ships the same workaround (//third_party/skia/gn/skia/BUILD.gn:454).
    "-Wno-psabi",
  ]
}

# Color management. Mirrors //third_party/skia/modules/skcms/BUILD.gn — split into
# baseline + per-arch transform variants because each variant translation
# unit needs its own -mavx2 / -mavx512* flags. On non-x64 the variants
# compile to empty objects via SKCMS_DISABLE_HSW / SKCMS_DISABLE_SKX guards
# in the source.
config("skcms_arch_disable_config") {
  if (current_cpu != "x64") {
    defines = [
      "SKCMS_DISABLE_HSW",
      "SKCMS_DISABLE_SKX",
    ]
  }
}

source_set("skcms_TransformHsw") {
  visibility = [ ":skcms" ]
  configs += [ "//build:no_unused_parameter" ]
  configs += [ ":skcms_arch_disable_config" ]
  if (current_cpu == "x64") {
    cflags = [
      "-mavx2",
      "-mf16c",
    ]
  }
  sources = skcms_TransformHsw
}

source_set("skcms_TransformSkx") {
  visibility = [ ":skcms" ]
  configs += [ "//build:no_unused_parameter" ]
  configs += [ ":skcms_arch_disable_config" ]
  if (current_cpu == "x64") {
    cflags = [
      "-mavx512f",
      "-mavx512dq",
      "-mavx512cd",
      "-mavx512bw",
      "-mavx512vl",
    ]
  }
  sources = skcms_TransformSkx
}

source_set("skcms") {
  configs += [ "//build:no_unused_parameter" ]
  configs += [ ":skcms_arch_disable_config" ]
  sources = skcms_public + skcms_TransformBaseline
  deps = [
    ":skcms_TransformHsw",
    ":skcms_TransformSkx",
  ]
  public_configs = [ ":skia_public_config" ]
}

# Hardcoded ports. Upstream skia's ":skia" component adds these outside the
# .gni lists (BUILD.gn lines 1882-1932), so we mirror them here.
_skia_extra_sources = [
  # Always:
  "//third_party/skia/src/ports/SkDiscardableMemory_none.cpp",
  "//third_party/skia/src/ports/SkMemory_malloc.cpp",
  "//third_party/skia/src/sfnt/SkOTTable_name.cpp",
  "//third_party/skia/src/sfnt/SkOTUtils.cpp",

  # POSIX (mac + linux): the file/debug ports.
  "//third_party/skia/src/ports/SkDebug_stdio.cpp",
  "//third_party/skia/src/ports/SkOSFile_posix.cpp",
]

# x64 needs the HSW dispatcher target (Init_hsw is referenced from
# SkOpts.cpp on every x86 build whose default SSE level is below AVX2).
# This translation unit needs -march=haswell; the rest of skia_core_sources
# self-targets via clang attribute pragmas and doesn't need it.
if (current_cpu == "x64") {
  source_set("skia_opts_hsw") {
    configs += [
      ":skia_internal_config",
      "//build:cxx17",
    ]
    cflags = [ "-march=haswell" ]

    sources = hsw

    public_configs = [ ":skia_public_config" ]
  }
}

# The minimal Skia static library.
static_library("skia") {
  configs += [
    ":skia_internal_config",
    "//build:cxx17",
  ]
  public_configs = [ ":skia_public_config" ]

  sources = []
  sources += skia_core_sources
  sources += skia_colorfilters_sources
  sources += skia_effects_sources
  sources += skia_effects_imagefilter_sources
  sources += skia_sksl_core_sources
  sources += skia_sksl_core_module_sources
  sources += skia_sksl_tracing_sources
  sources += skia_ports_sources
  sources += skia_utils_private
  sources += _skia_extra_sources

  public_deps = [ ":skcms" ]

  deps = []
  if (current_cpu == "x64") {
    deps += [ ":skia_opts_hsw" ]
  }

  # libdl: Skia uses dlsym() in a few places (e.g. tracing hooks). On macOS
  # it's part of libSystem so the linker resolves it without -ldl, but on
  # Linux glibc it's a separate library. Be explicit on Linux.
  libs = []
  if (current_os == "linux") {
    libs += [ "dl" ]
  }
}
